<resources>
    <string name="app_name">TrackLogger</string>
    <string name="general_ok">OK</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_error">An unexpected error has occurred.</string>
    <string name="general_speed_long">Speed</string>
    <string name="general_speed_short">Speed</string>
    <string name="general_kpa_long">Kilopascal</string>
    <string name="general_kpa_short">kPa</string>
    <string name="general_psi_long">Pounds Per Square Inch</string>
    <string name="general_psi_short">psi</string>
    <string name="general_bar_long">Bar</string>
    <string name="general_bar_short">bar</string>
    <string name="general_mph_long">Miles Per Hour</string>
    <string name="general_mph_short">MPH</string>
    <string name="general_kph_long">Kilometers Per Hour</string>
    <string name="general_kph_short">KPH</string>
    <string name="general_f_long">Fahrenheit</string>
    <string name="general_f_short">F</string>
    <string name="general_c_long">Celsius</string>
    <string name="general_c_short">C</string>
    <string name="general_rpm_long">Revolutions Per Minute</string>
    <string name="general_rpm_short">RPM</string>
    <string name="general_map_long">Manifold Absolute Pressure</string>
    <string name="general_map_short">MAP</string>
    <string name="general_mgp_long">Manifold Gauge Pressure</string>
    <string name="general_mgp_short">Boost/Vac</string>
    <string name="general_tp_long">Throttle Position</string>
    <string name="general_tp_short">TP</string>
    <string name="general_afr_long">Air Fuel Ratio</string>
    <string name="general_afr_short">AFR</string>
    <string name="general_mat_long">Intake Air Temperature</string>
    <string name="general_mat_short">IAT</string>
    <string name="general_clt_long">Coolant Temperature</string>
    <string name="general_clt_short">CLT</string>
    <string name="general_ign_adv_long">Ignition Advance</string>
    <string name="general_ign_adv_short">Ign. Adv.</string>
    <string name="general_batv_long">Battery Voltage</string>
    <string name="general_batv_short">BatV</string>
    <string name="menu_item_new">New</string>
    <string name="menu_item_duplicate">Duplicate</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_rename">Rename</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_import">Import</string>
    <string name="menu_item_export">Export</string>
    <string name="menu_item_view">View</string>
    <string name="error_alert_title">TrackLogger Error</string>
    <string name="error_bt_not_supported">No Bluetooth capabilities detected on this device.</string>
    <string name="error_bt_not_enabled">Bluetooth is not enabled.  Bluetooth is required for this application to function.</string>
    <string name="log_error_init">Error initializing data providers.  Check the logs for more details.</string>
    <string name="log_error_recording">Error recording log data.  Check the logs for more details.</string>
    <string name="log_setup_session_split_marker_set_name_prompt">Choose a split marker set…</string>
    <string name="log_setup_session_error_split_marker_set">You must choose a split marker set for this session.</string>
    <string name="log_wait_for_ready_location_title">Location:</string>
    <string name="log_wait_for_ready_accel_title">Accelerometer:</string>
    <string name="log_wait_for_ready_ecu_title">ECU:</string>
    <string name="log_wait_for_ready_text_waiting">Waiting…</string>
    <string name="log_wait_for_ready_text_ready">Ready</string>
    <string name="log_notification_title">TrackLogger</string>
    <string name="log_notification_message">Logging…</string>
    <string name="log_elapsed_lap_time_title">Elapsed Time</string>
    <string name="log_lap_number_title">Lap</string>
    <string name="log_elapsed_session_time_title">Session Time</string>
    <string name="log_last_split_time_title">Last Split Time</string>
    <string name="log_last_split_time_delta_title">Delta Best Split Time</string>
    <string name="log_last_lap_time_title">Last Lap Time</string>
    <string name="log_last_lap_time_delta_title">Delta Best Lap Time</string>
    <string name="log_split_index_title">Split Number</string>
    <string name="log_best_lap_time_title">Best Lap Time</string>
    <string name="log_best_split_time_title">Best Split Time</string>
    <string name="log_accel_update_frequency_title">Acceleration Update Freq.</string>
    <string name="log_lon_accel_title">Longitudinal Acceleration</string>
    <string name="log_lat_accel_title">Lateral Acceleration</string>
    <string name="log_vert_accel_title">Vertical Acceleration</string>
    <string name="log_location_update_frequency_title">Location Update Freq.</string>
    <string name="log_lat_title">Latitude</string>
    <string name="log_lon_title">Longitude</string>
    <string name="log_alt_title">Altitude</string>
    <string name="log_bearing_title">Bearing</string>
    <string name="log_speed_title">Speed</string>
    <string name="log_ecu_update_frequency_title">ECU Update Freq.</string>
    <string name="log_rpm_title">@string/general_rpm_short</string>
    <string name="log_map_title">@string/general_map_short</string>
    <string name="log_mgp_title">@string/general_mgp_short</string>
    <string name="log_tp_title">@string/general_tp_short</string>
    <string name="log_afr_title">@string/general_afr_short</string>
    <string name="log_mat_title">@string/general_mat_short</string>
    <string name="log_clt_title">@string/general_clt_short</string>
    <string name="log_ign_adv_title">@string/general_ign_adv_short</string>
    <string name="log_batv_title">@string/general_batv_short</string>
    <string name="session_list_empty">No sessions exist.  Log some data to create a session.</string>
    <string name="session_list_confirm_delete_prompt">Are you sure you want to delete session %1$d from %2$s?</string>
    <string name="session_list_context_menu_title">Session %d</string>
    <string name="session_list_deleted_notification">Deleted session %1$d from %2$s.</string>
    <string name="export_error_session_not_found">The selected session could not be found.  Please try again.</string>
    <string name="export_queued">Session export queued.</string>
    <string name="export_total_laps">Total Laps:</string>
    <string name="export_export_button_text">Export</string>
    <string name="export_progress_notification_running_ticker_message">Exporting session %d data…</string>
    <string name="export_progress_notification_running_content_text">Exporting %1$d of %2$d.</string>
    <string name="export_progress_notification_finished_ticker_message">Export finished.</string>
    <string name="export_progress_notification_finished_content_text">Finished exporting session %d data.</string>
    <string name="export_progress_notification_error_ticker_message">Export failed.</string>
    <string name="export_progress_notification_error_content_text">Error exporting session %d data.</string>
    <string name="split_marker_set_rename_prompt">Enter a new name for the split marker set with the name \'%s\'.</string>
    <string name="split_marker_set_rename_toast">Renamed \'%1$s\' to \'%2$s\'.</string>
    <string name="split_marker_set_rename_error_not_found">The requested split marker set could not be found.</string>
    <string name="split_marker_set_rename_error_invalid_name">The name entered is not a valid split marker set name.</string>
    <string name="split_marker_set_rename_error_duplicate">The name entered already exists.</string>
    <string name="split_marker_set_view_error_not_found">The requested split marker set could not be found.</string>
    <string name="split_marker_set_view_new_marker_instruction">Tap screen to place a new split marker.</string>
    <string name="split_marker_set_view_marker_title">Split Marker %d</string>
    <string name="split_marker_set_view_marker_moved_while_in_use">You cannot move a marker while the set is associated with a session.</string>
    <string name="split_marker_set_view_marker_moved_notification">\'%s\' moved.</string>
    <string name="split_marker_set_view_marker_added_notification">\'Split Marker %d\' added.</string>
    <string name="split_marker_set_view_marker_deleted_notification">\'%s\' deleted.</string>
    <string name="split_marker_set_view_marker_renamed_notification">\'%1$s\' renamed to \'%2$s\'.</string>
    <string name="split_marker_set_view_menu_item_zoom_to_show_all">Show all</string>
    <string name="split_marker_set_view_confirm_delete_marker_prompt">Are you sure you want to delete \'%s\'?</string>
    <string name="split_marker_set_view_default_new_split_marker_set_name">New Split Marker Set</string>
    <string name="split_marker_set_list_empty">No split marker sets exist.  Choose an option from the menu to import or create a new set.</string>
    <string name="split_marker_set_list_confirm_delete_prompt">Are you sure you want to delete the split marker set named \'%s\'?</string>
    <string name="split_marker_set_list_deleted_notification">Deleted the split marker set named \'%s\'.</string>
    <string name="split_marker_set_list_duplicated_notification">Copied \'%1$s\' to \'%2$s\'.</string>
    <string name="split_marker_set_list_pick_instructions">Short tap an item to select it.  Long tap for more options.</string>
    <string name="split_marker_set_config_import_duplicate_name">Could not import split marker set with name \'%s\'.  A split marker set already exists with that name.</string>
    <string name="split_marker_set_config_import_missing_source">Please select a source to import.</string>
    <string name="split_marker_set_config_import_invalid_format">Please select a valid input source format.</string>
    <string name="split_marker_set_import_notification_running_ticker_message">Importing split marker set \'%s\'…</string>
    <string name="split_marker_set_import_notification_running_content_text">Importing split marker %1$d of %2$d.</string>
    <string name="split_marker_set_import_notification_running_indeterminate_content_text">Importing split marker %1$d.</string>
    <string name="split_marker_set_import_notification_finished_ticker_message">Import finished.</string>
    <string name="split_marker_set_import_notification_finished_content_text">Finished importing split marker set \'%s\'.</string>
    <string name="split_marker_set_import_notification_error_ticker_message">Import failed.</string>
    <string name="split_marker_set_import_notification_error_content_text">Error importing split marker set \'%s\'.</string>
    <string name="preference_gauge_title_title">Title:</string>
    <string name="preference_gauge_min_value_title">Min. Value:</string>
    <string name="preference_gauge_max_value_title">Max. Value:</string>
    <string name="preference_gauge_major_scale_mark_delta_title">Scale Mark Delta:</string>
    <string name="preference_gauge_minor_scale_mark_segments_per_major_scale_mark_title">Seg. Per Scale Mark:</string>
    <string name="preference_gauge_scale_mark_label_scale_factor_title">Scale Label Scale Factor:</string>
    <string name="preference_gauge_scale_mark_label_precision_title">Scale Label Precision:</string>
    <string name="preference_gauge_show_value_title">Show Value:</string>
    <string name="preference_gauge_value_precision_title">Value Precision:</string>
    <string name="preference_gauge_min_critical_value_title">Min. Critical Value:</string>
    <string name="preference_gauge_min_warning_value_title">Min. Warning Value:</string>
    <string name="preference_gauge_max_warning_value_title">Max. Warning Value:</string>
    <string name="preference_gauge_max_critical_value_title">Max. Critical Value:</string>
    <string name="preference_gauge_use_alert_color_gradient_title">Alert Color Gradient:</string>
</resources>